Changed new Long() to Long.valueOF, cause the used method was inefficient.